--- a/ssca-manager/service/BUILD.bazel
+++ b/ssca-manager/service/BUILD.bazel
@@ -44,6 +44,7 @@ shared_dependencies = [
     "@maven//:io_swagger_core_v3_swagger_annotations",
     "@maven//:io_swagger_core_v3_swagger_models",
     "@maven//:io_swagger_core_v3_swagger_integration",
+    "@maven//:org_modelmapper_modelmapper",
 ]
 
 java_binary(
