--- a/350-event-server/chart/templates/ingress.yaml
+++ b/350-event-server/chart/templates/ingress.yaml
@@ -6,20 +6,23 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /ccmevent$1$2
+    {{- if .Values.global.ingress.objects.annotations }}
+      {{- include "harnesscommon.tplvalues.render" (dict "value" .Values.global.ingress.objects.annotations "context" $) | nindent 4 }}
+    {{- end }}
 spec:
   ingressClassName: {{ .Values.global.ingress.className | quote }}
   rules:
-    {{- range .Values.global.ingress.hosts }}
-    - host: {{ . | quote }}
-      http:
+    - http:
         paths:
           - backend:
               service:
                 name: event-service
                 port:
-                  number: {{ $.Values.service.port }}
+                  number: {{ .Values.service.port }}
             path: /ccmevent(/|$)(.*)
             pathType: ImplementationSpecific
+    {{- range .Values.global.ingress.hosts }}
+      host: {{ . | quote }}
     {{- end }}
   {{- if .Values.global.ingress.tls.enabled }}
   tls:
