--- a/charts/bootstrap/database/redis/templates/service.yaml
+++ b/charts/bootstrap/database/redis/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis-sentinel-harness
+  name: redis-harness
   namespace: {{ .Release.Namespace }}
   labels:
-    app: redis-sentinel
+    app: redis
     {{- include "redis.labels" . | nindent 4 }}
   annotations:
 spec:
@@ -15,94 +15,9 @@ spec:
     port: {{ .Values.service.serverport }}
     protocol: TCP
     targetPort: redis
-  - name: sentinel
-    port: {{ .Values.service.sentinelport }}
-    protocol: TCP
-    targetPort: sentinel
   selector:
-    release: redis-ha
-    app: redis-sentinel
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: redis-sentinel-harness-announce-0
-  namespace: {{ .Release.Namespace }}
-  labels:
-    app: redis-sentinel
-    {{- include "redis.labels" . | nindent 4 }}
-  annotations:
-    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
-spec:
-  publishNotReadyAddresses: true
-  type: ClusterIP
-  ports:
-  - name: server
-    port: {{ .Values.service.serverport }}
-    protocol: TCP
-    targetPort: redis
-  - name: sentinel
-    port: {{ .Values.service.sentinelport }}
-    protocol: TCP
-    targetPort: sentinel
-  selector:
-    release: redis-ha
-    app: redis-sentinel
-    "statefulset.kubernetes.io/pod-name": redis-sentinel-harness-server-0
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: redis-sentinel-harness-announce-1
-  namespace: {{ .Release.Namespace }}
-  labels:
-    app: redis-sentinel
-    {{- include "redis.labels" . | nindent 4 }}
-  annotations:
-    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
-spec:
-  publishNotReadyAddresses: true
-  type: ClusterIP
-  ports:
-  - name: server
-    port: {{ .Values.service.serverport }}
-    protocol: TCP
-    targetPort: redis
-  - name: sentinel
-    port: {{ .Values.service.sentinelport }}
-    protocol: TCP
-    targetPort: sentinel
-  selector:
-    release: redis-ha
-    app: redis-sentinel
-    "statefulset.kubernetes.io/pod-name": redis-sentinel-harness-server-1
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: redis-sentinel-harness-announce-2
-  namespace: {{ .Release.Namespace }}
-  labels:
-    app: redis-sentinel
-    {{- include "redis.labels" . | nindent 4 }}
-  annotations:
-    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
-spec:
-  publishNotReadyAddresses: true
-  type: ClusterIP
-  ports:
-  - name: server
-    port: {{ .Values.service.serverport }}
-    protocol: TCP
-    targetPort: redis
-  - name: sentinel
-    port: {{ .Values.service.sentinelport }}
-    protocol: TCP
-    targetPort: sentinel
-  selector:
-    release: redis-ha
-    app: redis-sentinel
-    "statefulset.kubernetes.io/pod-name": redis-sentinel-harness-server-2
+    release: redis
+    app: redis
 ---
 {{- if .Values.metrics.enabled }}
 apiVersion: v1
@@ -120,8 +35,8 @@ spec:
       port: {{ .Values.service.metricsPort }}
       targetPort: exporter-port
   selector:
-    app: redis-sentinel
-    release: redis-ha
+    app: redis
+    release: redis
   clusterIPs:
   type: ClusterIP
   ipFamilies:
