--- a/ce-nextgen/service/BUILD.bazel
+++ b/ce-nextgen/service/BUILD.bazel
@@ -30,6 +30,16 @@ shared_dependencies = [
     "@ce-nextgen//:com_azure_resourcemanager_azure_resourcemanager",
     "@ce-nextgen//:com_azure_resourcemanager_azure_resourcemanager_authorization",
     "@ce-nextgen//:com_azure_resourcemanager_azure_resourcemanager_resources",
+    "@maven//:io_dropwizard_metrics_metrics_annotation",
+    "@maven//:io_dropwizard_metrics_metrics_core",
+    "@maven//:io_dropwizard_metrics_metrics_graphite",
+    "@maven//:io_dropwizard_metrics_metrics_healthchecks",
+    "@maven//:io_dropwizard_metrics_metrics_jersey2",
+    "@maven//:io_dropwizard_metrics_metrics_jetty9",
+    "@maven//:io_dropwizard_metrics_metrics_json",
+    "@maven//:io_dropwizard_metrics_metrics_jvm",
+    "@maven//:io_dropwizard_metrics_metrics_logback",
+    "@maven//:io_dropwizard_metrics_metrics_servlets",
 ] + [
     "//374-ceng-graphql:module",
     "//440-connector-nextgen:module",
