--- a/100-migrator/chart/values.yaml
+++ b/100-migrator/chart/values.yaml
@@ -145,7 +145,7 @@ image:
   repository: harness/migrator-signed
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "100578"
+  tag: "100578-000"
   digest: ""
   imagePullSecrets:
   - gcr-io-secret
