--- a/310-iacm-manager/config/iacm-manager-config.yml
+++ b/310-iacm-manager/config/iacm-manager-config.yml
@@ -355,9 +355,4 @@ opaClientConfig:
   connectTimeOutSeconds: 15
   readTimeOutSeconds: 15
 
-streamPerServiceConfiguration:
-  migrateNodeStart: ${PIE_MIGRATE_NODE_START:-false}
-  migrateNodeResume: ${PIE_MIGRATE_NODE_RESUME:-false}
-  migrateFacilitator: ${PIE_MIGRATE_FACILITATOR:-false}
-  migrateNodeProgress:  ${PIE_MIGRATE_PROGRESS:-false}
-  migrateInterrupt: ${PIE_MIGRATE_INTERRUPT:-false}
+streamPerServiceConfiguration: ${PIE_STREAM_PER_SERVICE:- false}
