--- a/332-ci-manager/config/ci-manager-config.yml
+++ b/332-ci-manager/config/ci-manager-config.yml
@@ -502,9 +502,4 @@ featureFlagConfig:
 
 enableQueue: ${ENABLE_QUEUE:-false}
 
-streamPerServiceConfiguration:
-  migrateNodeStart: ${PIE_MIGRATE_NODE_START:-false}
-  migrateNodeResume: ${PIE_MIGRATE_NODE_RESUME:-false}
-  migrateFacilitator: ${PIE_MIGRATE_FACILITATOR:-false}
-  migrateNodeProgress:  ${PIE_MIGRATE_PROGRESS:-false}
-  migrateInterrupt: ${PIE_MIGRATE_INTERRUPT:-false}
+streamPerServiceConfiguration: ${PIE_STREAM_PER_SERVICE:- false}
