--- a/idp-service/config/config.yml
+++ b/idp-service/config/config.yml
@@ -219,9 +219,4 @@ tiServiceConfig:
   baseUrl: http://localhost:8078
   globalToken: "78d16b66-4b4c-11eb-8377-acde48001122"
 
-streamPerServiceConfiguration:
-  migrateNodeStart: ${PIE_MIGRATE_NODE_START:-false}
-  migrateNodeResume: ${PIE_MIGRATE_NODE_RESUME:-false}
-  migrateFacilitator: ${PIE_MIGRATE_FACILITATOR:-false}
-  migrateNodeProgress:  ${PIE_MIGRATE_PROGRESS:-false}
-  migrateInterrupt: ${PIE_MIGRATE_INTERRUPT:-false}
+streamPerServiceConfiguration: ${PIE_STREAM_PER_SERVICE:- false}
