--- a/120-ng-manager/config.yml
+++ b/120-ng-manager/config.yml
@@ -142,7 +142,7 @@ cvngClientConfig:
   connectTimeOutSeconds: 15
   readTimeOutSeconds: 15
 
-stoClientConfig:
+stoCoreClientConfig:
   baseUrl: http://localhost:4000/api/v2/system/
   connectTimeOutSeconds: 15
   readTimeOutSeconds: 15
