feat:[CDS-74726]: debugging unit test resources

--- a/960-api-services/BUILD.bazel
+++ b/960-api-services/BUILD.bazel
@@ -157,6 +157,7 @@ java_library(
     ],
     resources = [
         "//980-commons/src/main/resources:resource",
+        "//960-api-services/src/test/resources:resource"
     ],
     visibility = ["//visibility:public"],
     deps = [
