--- a/pipeline-service/config/config.yml
+++ b/pipeline-service/config/config.yml
@@ -62,6 +62,9 @@ pmsSdkOrchestrationEventPoolConfig:
   idleTime: ${PMS_SDK_ORCHESTRATION_EVENT_POOL_IDLE_TIME:-120}
   timeUnit: ${PMS_SDK_ORCHESTRATION_EVENT_POOL_IDLE_TIME_TIME_UNIT:-SECONDS}
 
+asyncDelegateResponseConsumption:
+  corePoolSize: ${ASYNC_DELEGATE_RESPONSE_THREAD_COUNT:-10}
+
 podCleanUpThreadPoolConfig:
   corePoolSize: ${POD_CLEANUP_POOL_CORE_SIZE:-5}
   maxPoolSize: ${{POD_CLEANUP_POOL_MAX_SIZE:-10}
