--- a/400-rest/src/main/resources/metrics/metricDefinitions/heartBeat_connection_metrics.yaml
+++ b/400-rest/src/main/resources/metrics/metricDefinitions/heartBeat_connection_metrics.yaml
@@ -4,5 +4,5 @@ metricGroup: heartbeat_entry
 metrics:
   - metricName: heartbeat_received
     metricDefinition: HeartBeat is received to manager
-    type: Count
-    unit: "1"
+    type: LastValue
+    unit: count
