fix: [CDS-78637]: qa hf pr fixing retry multi svc/env pipelines and adding forward compatibility (#52436)
* [CDS-78172]: qa hf pr fixing retry multi svc/env pipelines and adding forward compatibility

* [CDS-78172]: trigger principal changes and bumping build

--- a/pipeline-service/config/config.yml
+++ b/pipeline-service/config/config.yml
@@ -665,3 +665,5 @@ webhookEventHsqsDequeueConfig:
   threadSleepTimeInMillis: ${WEBHOOK_EVENT_DEQUE_THREAD_SLEEP_TIME_IN_MILLIS:-30}
 
 useQueueServiceForWebhookTriggers: ${USE_QUEUE_SERVICE_FOR_WEBHOOK_TRIGGERS:-false}
+
+useNewNodeEntityConfiguration: ${USE_NEW_NODE_ENTITY_CONFIGURATION:-false}
