--- a/880-pipeline-cd-commons/BUILD.bazel
+++ b/880-pipeline-cd-commons/BUILD.bazel
@@ -15,7 +15,10 @@ java_library(
     visibility = ["//visibility:public"],
     deps = [
         "//:lombok",
+        "//940-feature-flag:module",
+        "//945-account-mgmt:module",
         "//950-delegate-tasks-beans:module",
+        "//956-feature-flag-beans:module",
         "//970-ng-commons:module",
         "//980-commons:module",
         "//999-annotations:module",
